--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
+    "@microlink/react": "^5.5.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@supabase/supabase-js": "^2.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
+    "supabase": "^1.24.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
