--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.5.0",
     "@supabase/supabase-js": "^2.2.0",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.2.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
